feat: add endpoint and service for retrieving posts from users not followed
